--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,6 @@
   <!-- Initialize Firebase -->
   <script src="/__/firebase/init.js"></script>
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwLjmsiUV2UWUokv-zHmqLGJ-rnmadHEM"></script>
 </body>
 </html>
