--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,7 @@
   <script src="/__/firebase/init.js"></script>
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwLjmsiUV2UWUokv-zHmqLGJ-rnmadHEM"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBwLjmsiUV2UWUokv-zHmqLGJ-rnmadHEM"></script>
+
 </body>
 </html>
